--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>QQ、微信防红接口 - 勿埋我心</title>
+		<title>浏览器打开</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,11 +28,11 @@
 			<footer id="footer">
 				<ul class="icons">
 
-					<li><a href="https://github.com/Qiantigers/qq_fanghong" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+					<li><a href="https://aowen8888.github.io/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Powered by <a href="https://www.qian.blue" target="_blank">勿埋我心</a></li>
+					<li>&copy; Powered by <a href="https://www.baidu.com" target="_blank">helloworld</a></li>
 				</ul>
 			</footer>
 
